2_doorman/test/my-ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    cert-manager.io/cluster-issuer: topaz-elite-prod
  namespace: maple-topazelite-corda-network 
spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
       - pathType: Prefix
         backend:
           service:
             name: hello-world-1
             port:
               number: 60000
         path: /foo
# This section is only required if TLS is to be enabled for the Ingress
