2_doorman/test/my-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    cert-manager.io/cluster-issuer: topaz-elite-prod
#  namespace: foo
spec:
  ingressClassName: nginx
  rules:
    # - host: topaz-elite-prod.maple.com
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: hello-world-1
                port:
                  number: 60000
            path: /foo
# This section is only required if TLS is to be enabled for the Ingress
  tls:
    #- hosts:
    #   - topaz-elite-prod.maple.com
    - secretName: example-tls
